--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app1",
-  "version": "1.0.0",
+  "name": "bubble-link-2.0",
+  "version": "2.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start -c",
